@@ -13,7 +13,7 @@ Class1=CAlarmViewApp
 Class3=CMainFrame
 Class4=CAboutDlg
 
-ResourceCount=5
+ResourceCount=11
 Resource1=IDD_REQUEST_WAIT
 Resource2=IDD_ABOUTBOX
 Class2=CChildView
@@ -26,6 +26,12 @@ Resource4=IDR_MAINFRAME
 Class9=CAlarmBrowser
 Class10=CFlatButton
 Resource5=IDM_CONTEXT
+Resource6=IDD_LOGIN (English (U.S.))
+Resource7=IDD_SETTINGS (English (U.S.))
+Resource8=IDD_REQUEST_WAIT (English (U.S.))
+Resource9=IDD_ABOUTBOX (English (U.S.))
+Resource10=IDR_MAINFRAME (English (U.S.))
+Resource11=IDM_CONTEXT (English (U.S.))
 
 [CLS:CAlarmViewApp]
 Type=0
@@ -166,4 +172,71 @@ ImplementationFile=FlatButton.cpp
 BaseClass=CWnd
 Filter=W
 VirtualFilter=WC
+
+[ACL:IDR_MAINFRAME (English (U.S.))]
+Type=1
+Class=?
+Command1=ID_EDIT_COPY
+Command2=ID_EDIT_PASTE
+Command3=ID_EDIT_UNDO
+Command4=ID_EDIT_CUT
+Command5=ID_VIEW_REFRESH
+Command6=ID_NEXT_PANE
+Command7=ID_PREV_PANE
+Command8=ID_EDIT_COPY
+Command9=ID_EDIT_PASTE
+Command10=ID_EDIT_CUT
+Command11=ID_EDIT_UNDO
+CommandCount=11
+
+[DLG:IDD_ABOUTBOX (English (U.S.))]
+Type=1
+Class=?
+ControlCount=4
+Control1=IDC_STATIC,static,1342177283
+Control2=IDC_STATIC,static,1342308480
+Control3=IDC_STATIC,static,1342308352
+Control4=IDOK,button,1342373889
+
+[DLG:IDD_REQUEST_WAIT (English (U.S.))]
+Type=1
+Class=?
+ControlCount=2
+Control1=IDC_STATIC,static,1342177283
+Control2=IDC_INFO_TEXT,static,1342308352
+
+[DLG:IDD_LOGIN (English (U.S.))]
+Type=1
+Class=?
+ControlCount=15
+Control1=IDC_EDIT_SERVER,edit,1350631552
+Control2=IDC_EDIT_LOGIN,edit,1350631552
+Control3=IDC_EDIT_PASSWORD,edit,1350631584
+Control4=IDOK,button,1342242817
+Control5=IDCANCEL,button,1342242816
+Control6=IDC_STATIC,static,1342179342
+Control7=IDC_STATIC,static,1342308352
+Control8=IDC_STATIC,static,1342177296
+Control9=IDC_STATIC,static,1342308352
+Control10=IDC_STATIC,static,1342308352
+Control11=IDC_STATIC,static,1342308352
+Control12=IDC_STATIC,static,1342308352
+Control13=IDC_STATIC,static,1342177296
+Control14=IDC_RADIO_CLEAR,button,1342308361
+Control15=IDC_RADIO_BLOWFISH,button,1342177289
+
+[MNU:IDM_CONTEXT (English (U.S.))]
+Type=1
+Class=?
+Command1=ID_VIEW_REFRESH
+Command2=ID_CMD_EXIT
+Command3=ID_CMD_SETTINGS
+CommandCount=3
+
+[DLG:IDD_SETTINGS (English (U.S.))]
+Type=1
+Class=?
+ControlCount=2
+Control1=IDOK,button,1342242817
+Control2=IDCANCEL,button,1342242816
 
